plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '1.0.0-' + (System.getenv("GIT_COMMIT") ?: 'SNAPSHOT')

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    flatDir {
        dirs 'libs'
    }
}

dependencies {
    // Spring Boot
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // PostgreSQL
    implementation 'org.postgresql:postgresql'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'

    // Google OAuth
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.18.0'
    implementation 'com.google.api-client:google-api-client:2.2.0'
    implementation 'com.google.http-client:google-http-client-gson:1.43.3'
    implementation 'com.google.http-client:google-http-client-jackson2:1.43.3'

    // Stripe
    implementation 'com.stripe:stripe-java:28.4.0'

    // Springdoc OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    // Walidacja
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Testy
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'io.rest-assured:rest-assured:5.3.0'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // AWS SDK S3 (kompatybilne z Backblaze B2)
    implementation 'software.amazon.awssdk:s3:2.21.10'

    // Obsługa adnotacji jak @PostConstruct
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    // Webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // Apache Commons CSV
    implementation 'org.apache.commons:commons-csv:1.10.0'

    // Flyway
    implementation 'org.flywaydb:flyway-core:9.22.3'

    // CIF Tools Java (lokalny jar)

implementation name: 'ciftools-java-7.0.1'


}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.withType(Test).configureEach {
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}

// Produkcyjny jar z nazwą 'braggly.jar'
bootJar {
    archiveFileName = 'braggly.jar'
}
